--- a/MapMaven/Components/Settings.razor
+++ b/MapMaven/Components/Settings.razor
@@ -92,6 +92,13 @@
                 Reset Map Maven
             </MudButton>
 
+            <div class="full-width pa-3">
+                @if (!InitialSetup && UpdateService.IsInstalled)
+                {
+                    <MudChip Variant="Variant.Outlined" Size="Size.Small">Version: @UpdateService.CurrentVersion</MudChip>
+                }
+            </div>
+
             <MudButton
                 Color="Color.Primary"
                 Variant="Variant.Filled"
