Updated nuget packages + some styling fixes from MudBlazor update

--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -27,7 +27,7 @@
                     <SongPlaybackButton Map="context.Item"></SongPlaybackButton>
                 </MudTooltip>
                 <MudTooltip Text="Open map details" ShowOnFocus="false">
-                    <MudIconButton Icon="@Icons.Material.Filled.Info" Class="pb-0 pt-1" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDetails(context.Item)" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Info" Class="pb-0 pt-1 no-hover-background" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDetails(context.Item)" />
                 </MudTooltip>
             </div>
         </div>
