--- a/MapMaven/Components/Maps/SongPlaybackButton.razor
+++ b/MapMaven/Components/Maps/SongPlaybackButton.razor
@@ -10,7 +10,7 @@
         </div>
     }
     <MudIconButton Icon="@(CurrentlyPlaying ? Icons.Material.Filled.StopCircle : Icons.Material.Filled.PlayCircle)"
-                   Class="pt-0 pb-1"
+                   Class="pt-0 pb-1 no-hover-background"
                    OnClick="PlayPauseSongPreview">
     </MudIconButton>
 </div>
