--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -117,7 +117,7 @@
                                     <b>Recent high PP gain maps</b>
                                 </CardHeaderContent>
                             </MudCardHeader>
-                            <MapList Maps="RecentHighPpGainMaps" ShowHeader="false"></MapList>
+                            <MapList Maps="RecentHighPpGainMaps" ShowHeader="false" HiddenColumns="[MapListColumn.ScoreEstimates]"></MapList>
                         </MudCard>
                     </MudItem>
                     <MudItem xs="6">
@@ -139,7 +139,7 @@
                                     </div>
                                 </CardHeaderContent>
                             </MudCardHeader>
-                            <MapList Maps="RecommendedMaps" ShowHeader="false"></MapList>
+                            <MapList Maps="RecommendedMaps" ShowHeader="false" HiddenColumns="[MapListColumn.Pp]"></MapList>
                         </MudCard>
                     </MudItem>
                 </MudGrid>
