Map details popup can be opened from improvement maps and map details can be opened in the maplist if not yet downloaded

--- a/MapMaven/Components/Maps/MapList.razor
+++ b/MapMaven/Components/Maps/MapList.razor
@@ -105,7 +105,7 @@
 
         DialogService.Show<MapDetail>(
             title: null,
-            parameters: new() { { nameof(MapDetail.Map), fullMap } },
+            parameters: new() { { nameof(MapDetail.Map), fullMap }, { nameof(MapDetail.MapHash), map.Hash } },
             options: new()
             {
                 MaxWidth = MaxWidth.Small,
