Create dynamic playlist from recommended maps

--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -137,7 +137,7 @@
                                             }
                                             <MudMenu Icon="@Icons.Material.Filled.PlaylistAdd">
                                                 <MudMenuItem OnClick="AddRecommendedMapsToPlaylist">Add playlist</MudMenuItem>
-                                                <MudMenuItem>Add dynamic playlist</MudMenuItem>
+                                                <MudMenuItem OnClick="AddRecommendedMapsDynamicPlaylist">Add dynamic playlist</MudMenuItem>
                                             </MudMenu>
                                         </div>
                                     </div>
