--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -80,13 +80,22 @@
                         <MudCard>
                             <MudCardHeader Class="card-header-highlight">
                                 <CardHeaderContent>
-                                    <div class="d-flex align-center">
-                                        <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
-                                        <MudText Typo="Typo.h6">Global rank</MudText>
+                                    <div class="d-flex align-center justify-space-between">
+                                        <div class="d-flex">
+                                            <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
+                                            <MudText Typo="Typo.h6">Global rank</MudText>
+                                        </div>
+                                        <MudTooltip Text="Show/hide high pp gain moments">
+                                            <div class="d-flex align-center">
+                                                <MudChip Icon="@Icons.Material.Filled.KeyboardDoubleArrowUp">
+                                                    <MudCheckBox @bind-Value="ShowHighPpGainAnnotations" @bind-Value:after="SetHighPpGainAnnotations" Dense="true" />
+                                                </MudChip>
+                                            </div>
+                                        </MudTooltip>
                                     </div>
                                 </CardHeaderContent>
                             </MudCardHeader>
-                            <MudCardContent Class="py-0">
+                            <MudCardContent Class="pa-0">
                                 @if (Player?.RankHistory is not null && Player.RankHistory.Any())
                                 {
                                     <ApexChart @ref="RankHistoryChart"
